--- a/README
+++ b/README
@@ -132,7 +132,7 @@ Enertronics AR
 * Trabajos:      IP cores: PWM para control de electrónica de potencia.
                  Múltiples convertidores Boost controlados por FPGA.
 * Involucrados:  3
-* Actualización: 22-03-2016
+* Actualización: 01-04-2016
 
 
 Emtech
@@ -310,13 +310,13 @@ Universidad Nacional de Córdoba (UNC)
 Laboratorio de Comunicaciones Digitales (LCD)
 * Tipo:          universidad
 * Ubicación:     Córdoba
-* Web:           lcd.efn.uncor.edu
+* Web:           lcd.efn.unc.edu.ar
 * Temas:         ASICs para comunicaciones.
                  Diseño analógico y digital VLSI. Synopsys, Cadence;
                  Emulación sobre FPGAs. Verilog y SystemVerilog.
 * Trabajos:      N/A
 * Involucrados:  N/A
-* Actualización: 16-03-2016
+* Actualización: 01-04-2016
 
 
 Universidad Nacional de Mar del Plata, Facultad de Ingeniería
