Agregados 3 grupos de Universidades
UBA, UTN-FRBA y UN de Comahue. Todas en desarrollo de ASICs.

--- a/README
+++ b/README
@@ -293,6 +293,23 @@ Laboratorio de Microelectrónica
 * Actualización: 21-03-2016
 
 
+Universidad Nacional de Buenos Aires (UBA)
+Laboratorio de Microelectrónica (LM)
+* Tipo:          universidad
+* Ubicación:     Buenos Aires - CABA
+* Web:           materias.fi.uba.ar/6661/labmicro
+* Temas:         Arquitectura de microcontroladores, algoritmos de
+                 procesamiento de señales, circuitos asincrónicos.
+                 Sistemas RFID.
+                 Estudio y desarrollo de PDKs.
+                 ASICs. Herramientas de Synopsys y Mentor Graphics.
+                 Sensores CMOS, Optoelectrónica, Circuitos de capacitores
+                 conmutados, Amp. de instrumentación, Amp. de bajo ruido.
+* Trabajos:      N/A
+* Involucrados:  10+
+* Actualización: 01-04-2016
+
+
 Universidad Nacional del Centro de la Provincia de Buenos Aires
 Facultad de Ciencias Exactas
 Instituto de Investigación en Tecnología Informática Avanzada (INTIA)
@@ -304,6 +321,16 @@ Departamento de Computación y Sistemas
 * Trabajos:      N/A
 * Involucrados:  N/A
 * Actualización: 22-03-2016
+
+
+Universidad Nacional del Comahue
+* Tipo:          universidad
+* Ubicación:     Neuquén
+* Web:           www.uncoma.edu.ar
+* Temas:         ASICs.
+* Trabajos:      N/A
+* Involucrados:  N/A
+* Actualización: 01-04-2016
 
 
 Universidad Nacional de Córdoba (UNC)
@@ -371,6 +398,19 @@ Laboratorio de Electrónica, Investigación y Servicios (LEIS)
                  electrónica de potencia.
 * Involucrados:  <10
 * Actualización: 22-03-2016
+
+
+Universidad Tecnológica Nacional (UTN)
+Facultad Regional Buenos Aires (FRBA)
+Laboratorio de Microelectrónica 
+* Tipo:          universidad
+* Ubicación:     Buenos Aires - CABA
+* Web:           www.frba.utn.edu.ar
+* Temas:         ASICs. Herramientas de Synopsys y Mentor Graphics.
+
+* Trabajos:      N/A
+* Involucrados:  N/A
+* Actualización: 01-04-2016
 
 
 Universidad Tecnológica Nacional (UTN)
