--- a/README
+++ b/README
@@ -238,7 +238,7 @@ Raitech
 * Temas:         Desarrollo en lógica programables.
 * Trabajos:      N/A
 * Involucrados:  N/A
-* Actualización: 16-03-2016
+* Actualización: 05-04-2016
 
 
 Ryotech
@@ -271,7 +271,7 @@ Seltron
                  Verificación y validación. Norma DO-254.
 * Trabajos:      N/A
 * Involucrados:  N/A
-* Actualización: 16-03-2016
+* Actualización: 05-04-2016
 
 
 Slabs
@@ -450,7 +450,7 @@ Laboratorio de Microelectrónica
 
 Universidad Tecnológica Nacional (UTN)
 Facultad Regional Córdoba (FRC)
-Centro de Investigación y transferencia Acústica (CINTRA)
+Centro de Investigación y transferencia Acústica (CINTRA) - Unidad Asociada de CONICET
 * Tipo:          universidad
 * Ubicación:     Córdoba
 * Web:           www.investigacion.frc.utn.edu.ar/cintra
@@ -461,7 +461,7 @@ Centro de Investigación y transferencia Acústica (CINTRA)
                  trigonométricos y logarítmicos.
                  Interfaces I2C, I2S, SPI, SPDIF.
 * Involucrados:  ~10
-* Actualización: 29-03-2016
+* Actualización: 05-04-2016
 
 
 Universidad Tecnológica Nacional (UTN)
