Agregados un grupo universitario
UBA Ciencias Exactas y Naturales - Grupo Diseño de Sistemas con FPGA

--- a/README
+++ b/README
@@ -313,6 +313,21 @@ Laboratorio de Microelectrónica
 
 
 Universidad de Buenos Aires (UBA)
+Facultad de Ciencias Exactas y Naturales
+Departamento de Computación
+Grupo Diseño de Sistemas con FPGA
+* Tipo:          universidad
+* Ubicación:     Buenos Aires - CABA
+* Web:           www.dc.uba.ar/inv/grupos/index_html#fpga
+* Temas:         Sistemas embebidos y coprocesadores con FPGAs.
+                 Algoritmos de procesamiento de Imágenes.
+                 Verificación Funcional.
+* Trabajos:      Sistema de detección de "hot spots".
+* Involucrados:  N/A
+* Actualización: 05-04-2016
+
+
+Universidad de Buenos Aires (UBA)
 Facultad de Ingeniería
 Grupo de Procesamiento de Señales, Identificación y Control
 * Tipo:          universidad
@@ -326,6 +341,7 @@ Grupo de Procesamiento de Señales, Identificación y Control
 
 
 Universidad de Buenos Aires (UBA)
+Facultad de Ingenierí­a
 Laboratorio de Microelectrónica (LM)
 * Tipo:          universidad
 * Ubicación:     Buenos Aires - CABA
