--- a/README
+++ b/README
@@ -155,16 +155,15 @@ Emtech
 
 Instituto de Investigaciones Científicas y Técnicas para la defensa (CITEDEF)
 Departamento de Electrónica Aplicada
-Laboratorio de Navegación y Laboratorio de Técnicas Digitales
 * Tipo:          organismo
 * Ubicación:     Buenos Aires - Villa Martelli
 * Web:           www.citedef.gob.ar
-* Temas:         Trabajos sobre FPGAs. VHDL y Vrilog.
-* Trabajos:      Desarrollo de IP asociados a tecnologías UAV, desde control
-                 hasta interfaces de comunicaciones ad-hoc a nivel capa física
+* Temas:         Trabajos sobre FPGAs. VHDL y Verilog.
+* Trabajos:      Desarrollo de IPs asociados a tecnologías UAV, control e
+                 interfaces de comunicaciones ad-hoc a nivel capa física
                  para enlaces telemétricos.
-* Involucrados:  N/A
-* Actualización: 04-04-2016
+* Involucrados:  +4
+* Actualización: 05-04-2016
 
 
 Instituto Nacional de Tecnología Industrial (INTI)
@@ -248,7 +247,7 @@ Ryotech
 * Temas:         Desarrollo sobre FPGAs de Xilinx.
 * Trabajos:      N/A
 * Involucrados:  N/A
-* Actualización: 25-03-2016
+* Actualización: 05-04-2016
 
 
 Satellogic S.A
