--- a/README
+++ b/README
@@ -104,8 +104,8 @@ Centro Atómico Bariloche (CAB) - Laboratorio de bajas Temperaturas
                  CMOS tolerantes.
                  Herramientas de Synopsys y Mentor Graphics.
 * Trabajos:      N/A
-* Involucrados:  N/A
-* Actualización: 21-03-2016
+* Involucrados:  3+
+* Actualización: 05-04-2016
 
 
 Consejo Nacional de Investigaciones Científicas y Técnicas (CONICET)
