Agregado un grupo universitario
UNS muy reducido, faltaría info aportada por algún involucrado.

--- a/README
+++ b/README
@@ -455,6 +455,17 @@ Laboratorio de Electrónica, Investigación y Servicios (LEIS)
 * Actualización: 05-04-2016
 
 
+Universidad Nacional del Sur (UNS)
+Departamento de Ingeniería Electrónica y de Computadoras
+* Tipo:          universidad
+* Ubicación:     Buenos Aires - Bahía Blanca
+* Web:           www.uns.edu.ar
+* Temas:         VLSI Systems Design.
+* Trabajos:      N/A
+* Involucrados:  N/A
+* Actualización: 06-04-2016
+
+
 Universidad Tecnológica Nacional (UTN)
 Facultad Regional Buenos Aires (FRBA)
 Laboratorio de Microelectrónica 
